[gd_scene load_steps=29 format=3 uid="uid://24wdatym248p"]

[ext_resource type="Script" uid="uid://geoojyf7jgb2" path="res://Scripts/MainCharacter/main_character.gd" id="1_i00kt"]
[ext_resource type="Texture2D" uid="uid://vbuq6wcagru1" path="res://Art/MainCharacter/Idle/MainCharater-Idle.png" id="2_cctys"]
[ext_resource type="Texture2D" uid="uid://cyima13s8unkp" path="res://Art/MainCharacter/Crouch/main-character-crouch.png" id="2_gy7ys"]
[ext_resource type="Texture2D" uid="uid://mb252yw27321" path="res://Art/MainCharacter/Jump/MainCharacter-Jump.png" id="3_iomaa"]
[ext_resource type="Texture2D" uid="uid://cb2uui7jk2gg8" path="res://Art/MainCharacter/Walk/MainCharacter-Walk.png" id="3_ka8x8"]
[ext_resource type="AudioStream" uid="uid://b34bqwip5ttl" path="res://SoundEffects/JumpEffectSound/JumpSound.mp3" id="5_iomaa"]
[ext_resource type="Script" uid="uid://ck2mg5sw1ieog" path="res://Scripts/GeneralStates/Util/State_Machine.gd" id="7_b841a"]
[ext_resource type="Script" uid="uid://rscgxd7ldbe3" path="res://Scripts/MainCharacter/States/IdleState.gd" id="8_vyxe4"]
[ext_resource type="Script" uid="uid://x87sfans3ncm" path="res://Scripts/MainCharacter/States/RunningState.gd" id="9_7tkxx"]
[ext_resource type="Script" uid="uid://b1ch5ly3ytfev" path="res://Scripts/MainCharacter/States/WalkingState.gd" id="9_vyxe4"]
[ext_resource type="Script" uid="uid://dy2s574dxbvka" path="res://Scripts/MainCharacter/States/CrouchingState.gd" id="11_7tkxx"]
[ext_resource type="Script" uid="uid://c155xdk1v514i" path="res://Scripts/MainCharacter/States/JumpingState.gd" id="12_l6ccf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cri0l"]
atlas = ExtResource("2_gy7ys")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iomaa"]
atlas = ExtResource("2_cctys")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gy7ys"]
atlas = ExtResource("2_cctys")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbnlg"]
atlas = ExtResource("2_cctys")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sw4wl"]
atlas = ExtResource("2_cctys")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlix5"]
atlas = ExtResource("3_iomaa")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bk1fc"]
atlas = ExtResource("3_ka8x8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygope"]
atlas = ExtResource("3_ka8x8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b45ms"]
atlas = ExtResource("3_ka8x8")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dl21"]
atlas = ExtResource("3_ka8x8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b841a"]
atlas = ExtResource("3_ka8x8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyxe4"]
atlas = ExtResource("3_ka8x8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tkxx"]
atlas = ExtResource("3_ka8x8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6ccf"]
atlas = ExtResource("3_ka8x8")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ygope"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cri0l")
}],
"loop": true,
"name": &"Crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iomaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gy7ys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbnlg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sw4wl")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlix5")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 0.61,
"texture": SubResource("AtlasTexture_bk1fc")
}, {
"duration": 0.61,
"texture": SubResource("AtlasTexture_ygope")
}, {
"duration": 0.61,
"texture": SubResource("AtlasTexture_b45ms")
}, {
"duration": 0.61,
"texture": SubResource("AtlasTexture_1dl21")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b841a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyxe4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tkxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6ccf")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nlix5"]
size = Vector2(11, 20)

[node name="MainCharacter" type="CharacterBody2D"]
script = ExtResource("1_i00kt")

[node name="MainCharacterAnimations" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ygope")
animation = &"Run"
autoplay = "Idle"
frame_progress = 0.5074577

[node name="MainCharacterCollision" type="CollisionShape2D" parent="."]
position = Vector2(-4.5, 5)
shape = SubResource("RectangleShape2D_nlix5")

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_iomaa")
volume_db = -12.117
bus = &"JumpSound"

[node name="FSM" type="Node" parent="." node_paths=PackedStringArray("father", "animation_player", "current_state")]
script = ExtResource("7_b841a")
father = NodePath("..")
animation_player = NodePath("../MainCharacterAnimations")
current_state = NodePath("Idle")

[node name="Idle" type="Node" parent="FSM" node_paths=PackedStringArray("walk_state", "run_state", "crouch_state", "jump_state", "father")]
script = ExtResource("8_vyxe4")
walk_state = NodePath("../Walk")
run_state = NodePath("../Run")
crouch_state = NodePath("../Crouch")
jump_state = NodePath("../Jump")
father = NodePath("../..")

[node name="Walk" type="Node" parent="FSM" node_paths=PackedStringArray("idle_state", "run_state", "jump_state", "father")]
script = ExtResource("9_vyxe4")
idle_state = NodePath("../Idle")
run_state = NodePath("../Run")
jump_state = NodePath("../Jump")
father = NodePath("../..")

[node name="Run" type="Node" parent="FSM" node_paths=PackedStringArray("idle_state", "walk_state", "jump_state", "father")]
script = ExtResource("9_7tkxx")
idle_state = NodePath("../Idle")
walk_state = NodePath("../Walk")
jump_state = NodePath("../Jump")
father = NodePath("../..")

[node name="Crouch" type="Node" parent="FSM" node_paths=PackedStringArray("walk_state", "jump_state", "father")]
script = ExtResource("11_7tkxx")
walk_state = NodePath("../Walk")
jump_state = NodePath("../Jump")
father = NodePath("../..")

[node name="Jump" type="Node" parent="FSM" node_paths=PackedStringArray("idle_state", "father")]
script = ExtResource("12_l6ccf")
idle_state = NodePath("../Idle")
father = NodePath("../..")
